# tech-digest

./: .gitignore  CLAUDE.md  Procfile  README.md  app.py  db.py  pyproject.toml  scrape_job.py  telegram.py
static/: site.webmanifest
tech_digest/: app.py  config.py  db.py  scraper.py  services.py  telegram.py
templates/: index.html
