[project]
name = "hackernews-scraper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "beautifulsoup4",
    "fastapi",
    "uvicorn",
    "jinja2",
]

[tool.hatch.build.targets.wheel]
packages = ["tech_digest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
